switch to minimessage translation store