@@ -9,7 +9,6 @@ import org.incendo.cloud.minecraft.extras.caption.ComponentCaptionFormatter;
 import org.incendo.cloud.minecraft.extras.caption.RichVariable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static net.kyori.adventure.text.Component.text;
 import static net.kyori.adventure.text.Component.translatable;
@@ -17,12 +16,12 @@ import static net.kyori.adventure.text.Component.translatable;
 public final class CaptionFormatter implements ComponentCaptionFormatter<Audience> {
 	@Override
 	public @NonNull Component formatCaption(@NonNull Caption captionKey, @NonNull Audience recipient, @NonNull String caption, @NonNull List<@NonNull CaptionVariable> variables) {
-		return translatable("cloud." + captionKey.key(), variables.stream().map(variable -> {
+		return translatable("webhooklogger.command." + captionKey.key(), variables.stream().map(variable -> {
 			if (variable instanceof RichVariable) {
 				return (RichVariable) variable;
 			} else {
 				return text(variable.value());
 			}
-		}).collect(Collectors.toList()));
+		}).toList());
 	}
 }
